<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/restart"
            android:contentDescription="@string/restart_imagebutton"
            android:onClick="restart" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ibExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/exit"
            android:contentDescription="@string/exit_imagebutton"
            android:onClick="exit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/high_score_imageview"
            android:visibility="gone"
            app:srcCompat="@drawable/high_score" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score: "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textColor="@android:color/holo_green_light"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Personal best: "
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvHighScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="best"
                android:textColor="@android:color/holo_red_light"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/game_over_imageview"
            app:srcCompat="@drawable/game_over" />
    </LinearLayout>
</LinearLayout>